fix(Team): Change map design on mobile (#191)

--- a/_sass/pages/team.scss
+++ b/_sass/pages/team.scss
@@ -11,12 +11,22 @@
     top: 0;
     height: 40%;
     background-image: linear-gradient(0deg, transparent 0%, #030c1a 40%);
+    opacity: 0.8;
+
+    @media screen and (min-width: $tablet) {
+      opacity: 1;
+    }
   }
 }
 
 .team-map__wrap {
   position: relative;
   z-index: 2;
+  top: 3em;
+
+  @media screen and (min-width: $tablet) {
+    top: 0;
+  }
 }
 
 .team-map__map {
@@ -30,6 +40,11 @@
 .team-map__pin {
   position: absolute;
   opacity: 0;
+  display: none;
+
+  @media screen and (min-width: $tablet) {
+    display: block;
+  }
 
   &:after {
     content: "";
@@ -178,6 +193,19 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+
+  &:after {
+    content: "";
+
+    @media screen and (min-width: 33em) {
+      width: calc(100% / 2 - 0.5em);
+    }
+
+    @media screen and (min-width: 60em) {
+      margin-bottom: 3em;
+      width: calc(100% / 3 - 1.5em);
+    }
+  }
 }
 
 .team-item {
